qa: keep visual regression tests source-compatible